# uwa_darwins_daisy

./: .gitignore  README.md  docs.md  latest_manuscript.docx  literature.md  main.py  manuscript.md  pyproject.toml
figures/: sup_table_2.csv
metadata/: itol_annoation.txt  raw_sample_metadata.xlsx
plots/functional_annotation/: non_core_GO0016114_summary_table.html
reports/: alignment_summary_report.html  masurca_quast_report.html  sgsgeneloss_gene_analysis.docx  sgsgeneloss_report.html
scripts/bam_stats/: visualise_bam_stats.py
scripts/functional_annotation/: analyse_go_terms.py  annotation_analysis.py  clean_proteins.py  combine_figures.py  diamond_blast.sh  filter_by_go.py  merge_go_terms.py
scripts/go_enrichment/: analyse_go_terms.py  filter_by_go.py  go_enrichment.py  go_network.py  non_core_presence_v_distance.py
scripts/maker_round_1/: maker_opts.ctl  run_maker.slrm
scripts/maker_round_2/: get_high_conf_hits.py
scripts/masurca/: extract_unmapped.sh  merge_blastn_taxonomy.py  merge_daisy_raws_fastq.sh  run_blastn_array.slrm  run_masurca.sh  run_minimap.slrm  unmapped_contig_blastn_plots.py
scripts/sgsgeneloss/: compare_pav_trees.py  merge_excovs.py  metadata_accociation.py  nc_position_analysis.py  nj_pav_tree.py  pairwise_differences.py  pav_greatable.py  plot_stats.py  popcolors.py  terpenoid_genes.py
