[project]
name = "uwa-darwins-daisy"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tabulate>=0.9.0",
    "umap>=0.1.1",
]
